client/layout/global-sidebar/style.scss
@import "@wordpress/base-styles/mixins";
@import "@wordpress/base-styles/variables";
@import "@automattic/typography/styles/variables";
$brand-text: "SF Pro Text", $sans;
.global-sidebar {
	bottom: 0;
	display: flex;
	flex-direction: column;
	left: 0;
	height: 100%;
	position: relative;
	top: 0;
	transition: all 220ms ease-out;
	background-color: var(--color-sidebar-background);

	ul.sidebar__menu:not(.is-togglable) {
		height: 100%;
	}

	.tooltip {
		position: relative;

		&::after {
			height: 20px;
			line-height: 20px;
			background: var(--color-sidebar-tooltip-background);
			border-radius: 4px;
			bottom: -24px;
			color: var(--color-sidebar-tooltip-text);
			content: attr(data-tooltip);
			display: none;
			font-size: $font-body-extra-small;
			opacity: 0.95;
			padding: 3px 6px;
			position: absolute;
			right: 0;
			white-space: nowrap;
			z-index: 8;
		}

		&:hover::after {
			display: block;
		}
	}

	.tooltip-bottom-left {
		&::after {
			left: 0;
			right: unset;
		}
	}

	.tooltip-top {
		&::after {
			right: unset;
			bottom: unset;
			left: 0;
			top: -29px;
		}
	}

	.sidebar__item {
		border-radius: 2px;
	}

	.sidebar__header {
		align-items: center;
		// Hide the header when the masterbar is visible.
		display: none;
		gap: 8px;
		padding: 30px 24px 29px;

		a {
			color: var(--nav-link);
			text-decoration: none;
		}

		span.dotcom,
		button.sidebar__item-search,
		a.sidebar__item-notifications {
			display: flex;
			width: 28px;
			height: 28px;
			margin: 0;
		}

		span.gap {
			flex: 1;
		}

		span.dotcom {
			background-image: url(calypso/assets/images/global-sidebar/dotcom.svg);
			background-repeat: no-repeat;
			background-position: center;
			width: 125px;
		}

		.link-logo {
			border-radius: 2px;
		}

		.sidebar__item-search {
			justify-content: center;
			align-items: center;
			cursor: pointer;
			svg {
				fill: var(--color-sidebar-gridicon-fill);
			}
		}

		.sidebar__skip-navigation {
			position: absolute;
			left: -10000px;
			z-index: z-index("root", ".sidebar__skip-navigation");
			border-radius: 2px;

			&:focus {
				left: auto;
			}
		}
	}

	.sidebar__body {
		@include custom-scrollbars-on-hover(transparent, $gray-600);
		flex: 1;
		overflow-y: auto;
		padding-top: 12px;

		.sidebar,
		.sidebar__menu:not(.is-togglable) {
			display: flex;
			min-height: unset;
			flex-direction: column;
			gap: 3px;
		}

		.sidebar {
			&:first-child {
				margin-top: 4px;
			}

			.sidebar__menu.is-togglable .sidebar__heading,
			.sidebar__expandable-content .sidebar__menu-link {
				font-size: $default-font-size;
				line-height: 15px;
			}

			.sidebar__expandable-content {
				.sidebar__menu-link {
					margin: 0;
					color: var(--color-sidebar-submenu-text);
				}

				.reader-sidebar-tags__text-input {
					padding-inline-end: 0;
				}
			}
		}

		li.sidebar__separator {
			margin: 0 0 24px;
		}

		.sidebar__expandable-arrow {
			fill: var(--color-sidebar-text);
			height: 15px;
			width: 15px;
		}

		.selected .sidebar__menu-link::after {
			display: none;
		}

		li.sidebar-streams__search {
			margin: 0;
		}

		.sidebar__menu-link {
			&.svg_all-sites {
				margin: -2px 6px -2px -2px;
			}
		}
	}

	.sidebar__footer {
		display: flex;
		gap: 8px;
		align-items: center;
		padding: 16px 24px 16px 24px;

		.sidebar__menu-icon {
			margin-right: 0;
		}
		.sidebar__footer-link {
			display: flex;
			align-items: center;
			border-radius: 2px;
		}
		.sidebar__item-help {
			display: flex;
			align-items: center;
			padding: 4px;
			cursor: pointer;

			svg {
				height: 24px;
				width: 24px;
			}
		}
		.sidebar__footer-reader {
			padding: 4px;
		}
		.sidebar__footer-profile {
			padding: 6px;
		}
		.sidebar__footer-wpadmin {
			display: flex;
			flex-grow: 1;
			align-items: center;
			height: 16px;
			padding: 8px 0;
			font-size: $font-body-small;
			border-radius: 2px;

			svg {
				&.wpicon {
					margin-right: 10px;
				}
				&.external {
					margin-left: auto;
				}
			}
		}

		.sidebar__footer-language-switcher {
			align-items: center;
			color: var(--studio-gray-5);
			cursor: pointer;
			display: flex;
			height: 32px;
			gap: 6px;
			padding: 6px;
			justify-content: center;
			margin-inline-start: auto;
		}


		&:has(.sidebar__footer-language-switcher) {
			background: var(--studio-orange);
		}

		.sidebar__item-help,
		.sidebar__footer-link,
		.sidebar__footer-wpadmin {
			color: var(--color-sidebar-text);

			svg path {
				fill: var(--color-sidebar-gridicon-fill);
			}

			&:hover {
				color: var(--color-sidebar-menu-hover-text);
				text-decoration: none;

				svg {
					fill: var(--color-sidebar-menu-hover-text);
				}
			}
		}

		.sidebar__footer-language-switcher,
		.sidebar__footer-link,
		.sidebar__item-help {
			&:hover {
				background-color: var(--color-sidebar-menu-hover-background);
				border-radius: 4px;
			}
		}
	}

	.sidebar-notifications {
		.sidebar__menu-icon.sidebar_svg-notifications {
			fill: var(--color-sidebar-background);
			path {
				stroke: var(--color-sidebar-gridicon-fill);
			}
		}
		&.has-unread .sidebar__menu-icon.sidebar_svg-notifications path {
			fill: var(--color-sidebar-gridicon-fill);
			stroke: unset;
		}
	}

	.sidebar__back-link {
		padding-left: 12px;
		margin-top: 4px;

		a {
			color: var(--nav-link);
			text-decoration: none;
			align-items: center;
			display: inline-flex;
			margin-bottom: 24px;
			padding: 9px;
			border-radius: 2px;
			gap: 8px;
		}

		svg.gridicons-chevron-left {
			vertical-align: top;
			fill: var(--color-sidebar-gridicon-fill);
		}

		.sidebar__back-link-text {
			font-size: $default-font-size;
			vertical-align: text-bottom;
		}
	}

	.site {
		background: var(--color-sidebar-menu-hover-background);
		flex: unset;
		padding: 0;
		margin: 16px 12px;
		border-radius: 2px;

		a.site__content {
			padding: 12px;
			border-radius: 2px;
		}
		&.is-selected,
		&:hover {
			background: var(--color-sidebar-menu-selected-background);

			.site__title,
			.site__domain {
				color: var(--color-sidebar-menu-selected-text);
			}
		}
	}

	.is-section-reader & .sidebar__menu-item-siteicon {
		margin-inline-end: 12px;
	}

	.sidebar__menu .sidebar__heading {
		outline: none;
	}
}

.accessible-focus div.global-sidebar {
	*:focus {
		outline-style: solid;
		outline-color: var(--color-sidebar-menu-selected-background);
		outline-width: 2px;
		outline-offset: 2px;
	}


	.button,
	.site__content,
	.components-button {
		&:focus {
			box-shadow: none;
			border-color: inherit;
		}
	}

	.sidebar__menu-link,
	.sidebar__menu.is-togglable.is-toggle-open .sidebar__heading {
		&:focus {
			background-color: var(--color-sidebar-menu-hover-background);
		}
	}

	.selected {
		.sidebar__menu-link,
		.sidebar__menu.is-togglable.is-toggle-open .sidebar__heading {
			&:focus {
				background-color: var(--color-sidebar-menu-selected-background);
			}
		}
	}
}

.masterbar {
	border: none;
}

.has-no-masterbar {
	.layout__content {
		padding-top: 0;
		margin-top: 0;
		top: 0;
	}

	.global-sidebar {
		.sidebar__header {
			display: flex;
		}

		.sidebar__body {
			padding-top: 0;
		}
	}
}

.is-global-sidebar-collapsed {
	.global-sidebar {
		.sidebar__header,
		.sidebar__footer {
			flex-direction: column;

			.sidebar__footer-profile {
				padding: 0;
			}
		}

		.sidebar__header {
			span.dotcom {
				background-position: left;
				width: 24px;
				margin-left: 6px;
			}
		}

		.sidebar__body {
			.sidebar__menu-item-parent .sidebar__menu-link {
				margin: 0;
			}
			.sidebar__menu-link-text {
				display: none;
			}
			.sidebar__menu-icon {
				margin-left: 4px;
				&.svg_all-sites {
					margin-left: 2px;
				}
			}
		}
	}
}

